[package]
name = "Scant"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]

js-sys = "0.3.48"
wasm-bindgen = "0.2.71"
strum = "0.20"
strum_macros = "0.20"
serde = "1"
serde_derive = "1"

yew = { path = "../yew/packages/yew" }
yew-services = { path = "../yew/packages/yew-services" }


[dependencies.web-sys]
version = "0.3.48"
features = [
  'HtmlCanvasElement',
  'MessageEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebSocket',
]